fix : rollback icon changes

--- a/src/components/RoomTile/style.scss
+++ b/src/components/RoomTile/style.scss
@@ -85,8 +85,8 @@ $private-color-full: #A7A7A7;
       gap: 0.65rem;
 
       .icon {
-        //height: 1.9rem;
-        //width: 1.9rem;
+        height: 1.9rem;
+        width: 1.9rem;
         overflow: hidden;
       }
 
