--- a/src/components/RoomTile/style.scss
+++ b/src/components/RoomTile/style.scss
@@ -6,11 +6,14 @@ $private-color-full: #A7A7A7;
 .RoomTile {
   display: flex;
   flex-direction: column;
-  gap: 0.85rem;
   border-radius: 1rem;
   overflow: hidden;
   background: #FFFFFF;
   box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.1);
+
+  & > div {
+    margin-bottom: 0.85rem;
+  }
 
   .room-header {
     display: flex;
@@ -21,6 +24,7 @@ $private-color-full: #A7A7A7;
     align-items: center;
     padding-inline: 0.9rem;
     gap: 0.5rem;
+    margin-bottom: 0.75rem;
   }
 
   .room-name {
@@ -31,7 +35,7 @@ $private-color-full: #A7A7A7;
   }
 
   .room-desc-wrap {
-    height: 2.3rem;
+    height: 2.4rem;
     margin-inline: 0.85rem;
     padding-inline: 0.45rem;
     line-height: 1.15rem;
