--- a/src/components/Sidebar/SettingsSidebar.scss
+++ b/src/components/Sidebar/SettingsSidebar.scss
@@ -54,6 +54,29 @@
       }
     }
   }
+
+  .body {
+    display: flex;
+    flex-direction: column;
+
+    button {
+      background: none;
+      color: #FFFFFF;
+      text-align: left;
+      width: 100%;
+      height: 3.6rem;
+      border-radius: 0;
+      padding-inline: 2.5rem;
+      font-size: 1.2rem;
+
+      &:hover {
+        background: #46bdaf;
+      }
+      &:active {
+        background: #3eab9e;
+      }
+    }
+  }
 }
 
 .open .settings.sidebar {
