feat : add tabcard items to tab pages

--- a/src/components/TabPage/style.scss
+++ b/src/components/TabPage/style.scss
@@ -37,4 +37,14 @@
       }
     }
   }
+
+  .body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-block: 1rem;
+    gap: 1rem;
+
+
+  }
 }
