--- a/src/routes/Notice.scss
+++ b/src/routes/Notice.scss
@@ -1,5 +1,11 @@
 .Notice {
-  .header {
-
+  .TabCard {
+    p {
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      font-size: 0.9rem;
+      color: #2a2a2a;
+      word-break: break-all;
+    }
   }
 }
