--- a/src/index.scss
+++ b/src/index.scss
@@ -1,44 +1,9 @@
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 100;
-  src: url("./resource/fonts/NotoSansKR-Thin.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 300;
-  src: url("./resource/fonts/NotoSansKR-Light.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 400;
-  src: url("./resource/fonts/NotoSansKR-Regular.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 500;
-  src: url("./resource/fonts/NotoSansKR-Medium.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 700;
-  src: url("./resource/fonts/NotoSansKR-Bold.otf") format("opentype");
-}
-
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 900;
-  src: url("./resource/fonts/NotoSansKR-Black.otf") format("opentype");
-}
-
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
 body {
   margin: 0;
   padding: 0;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Spoqa Han Sans Neo ", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #ECEEF2;
