feat: Add card design

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,7 @@ body {
   font-family: "Spoqa Han Sans Neo ", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #ECEEF2;
+  background: #e5e7ea;
 }
 
 #browser {
