--- a/src/components/Modal/PasswordModal.scss
+++ b/src/components/Modal/PasswordModal.scss
@@ -27,7 +27,7 @@
     padding-inline: 1rem;
 
     &::placeholder {
-      color: #AAAAAA
+      color: #aaaaaa;
     }
   }
 
@@ -39,7 +39,7 @@
 
   button {
     &.join {
-      color: #FFFFFF;
+      color: #ffffff;
       width: 7rem;
       background: #191919;
 
@@ -52,12 +52,12 @@
       }
 
       &:disabled {
-        background: #A7A7A7
+        background: #a7a7a7;
       }
     }
 
     &.abort {
-      width: 4.5rem
+      width: 4.5rem;
     }
   }
 }
