--- a/src/components/TabCard/style.scss
+++ b/src/components/TabCard/style.scss
@@ -1,5 +1,5 @@
 .TabCard {
-  background: #FFFFFF;
+  background: #ffffff;
   width: min(90%, 50rem);
   box-sizing: border-box;
   border-radius: 1rem;
