--- a/src/routes/Donate.scss
+++ b/src/routes/Donate.scss
@@ -1,7 +1,7 @@
 .Donate {
   button {
-    color: #FFFFFF;
-    background: #49C5B6;
+    color: #ffffff;
+    background: #49c5b6;
     width: 8rem;
     height: 2.8rem;
     border-radius: 0.5rem;
