--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,6 +1,6 @@
 .Footer {
-  color: #9B9DA8;
-  background: #3A3E4C;
+  color: #9b9da8;
+  background: #3a3e4c;
   height: 8rem;
   text-align: center;
   font-size: 0.85rem;
