--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -17,7 +17,9 @@
     justify-content: space-between;
 
     width: 100%;
-    transition: height .2s ease-out, background-color .2s ease-out;
+    transition:
+      height 0.2s ease-out,
+      background-color 0.2s ease-out;
 
     button {
       border-radius: 0;
@@ -34,7 +36,7 @@
       align-items: center;
       overflow: visible;
       min-width: 16rem;
-      transition: width .17s ease-out;
+      transition: width 0.17s ease-out;
 
       svg {
         width: 100%;
@@ -50,7 +52,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      transition: width .2s ease-out;
+      transition: width 0.2s ease-out;
 
       &.menu {
         background: #dbdce2;
@@ -61,8 +63,8 @@
       }
 
       &.settings {
-        color: #FFFFFF;
-        background: #49C5B6;
+        color: #ffffff;
+        background: #49c5b6;
 
         &:hover {
           background: #46bdaf;
@@ -72,7 +74,9 @@
       div {
         overflow: hidden;
         white-space: nowrap;
-        transition: width .2s ease-out, opacity .15s ease-out;
+        transition:
+          width 0.2s ease-out,
+          opacity 0.15s ease-out;
       }
     }
   }
@@ -89,14 +93,17 @@
 
     gap: 1rem;
     justify-content: center;
-    transition: left .2s ease-out, right .2s ease-out, top .2s ease-out;
+    transition:
+      left 0.2s ease-out,
+      right 0.2s ease-out,
+      top 0.2s ease-out;
 
     button.refresh {
       height: 2.6rem;
       width: 2.6rem;
       flex-shrink: 0;
       border-radius: 1.3rem;
-      background: #FFFFFF;
+      background: #ffffff;
       box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.1);
       display: flex;
       align-items: center;
@@ -108,7 +115,7 @@
 .big.Header {
   .Title {
     height: 5.8rem;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
 
     .logo-container {
       width: 100%;
@@ -134,7 +141,7 @@
 .small.Header {
   .Title {
     height: 4.6rem;
-    background-color: #F3F4F7;
+    background-color: #f3f4f7;
 
     .logo-container {
       width: 0;
