--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -18,7 +18,7 @@
     top: 50%;
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 1rem;
     padding: 1rem 1.2rem 1.2rem;
     display: flex;
@@ -27,7 +27,6 @@
     box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.1);
   }
 }
-
 
 @keyframes fade-in {
   from {
