--- a/src/components/Sidebar/SettingsSidebar.scss
+++ b/src/components/Sidebar/SettingsSidebar.scss
@@ -1,6 +1,6 @@
 .SidebarContainer .settings.sidebar {
-  background: #49C5B6;
-  transition: right .2s cubic-bezier(0.2, 0.5, 0.2, 1);
+  background: #49c5b6;
+  transition: right 0.2s cubic-bezier(0.2, 0.5, 0.2, 1);
 
   .header-container {
     display: flex;
@@ -26,7 +26,7 @@
         font-size: 1.7rem;
         line-height: 2.5rem;
         font-weight: 400;
-        color: #FFFFFF;
+        color: #ffffff;
         padding-bottom: 0.3rem;
       }
     }
@@ -35,7 +35,7 @@
       height: 3rem;
       width: 3rem;
       border-radius: 0.8rem;
-      background: #49C5B6;
+      background: #49c5b6;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -61,7 +61,7 @@
 
     button {
       background: none;
-      color: #FFFFFF;
+      color: #ffffff;
       text-align: left;
       width: 100%;
       height: 3.6rem;
@@ -84,5 +84,5 @@
 }
 
 .closed .settings.sidebar {
-  right: -35rem
+  right: -35rem;
 }
