--- a/src/components/TabPage/style.scss
+++ b/src/components/TabPage/style.scss
@@ -8,7 +8,7 @@
     flex-direction: row;
     align-items: center;
 
-    background: #FFFFFF;
+    background: #ffffff;
     height: 4.6rem;
     box-shadow: 0 0 0.8rem rgba(127, 127, 127, 0.15);
 
@@ -22,7 +22,7 @@
       height: 3rem;
       width: 3rem;
       border-radius: 0.8rem;
-      background: #FFFFFF;
+      background: #ffffff;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -49,7 +49,5 @@
     padding-top: 6rem;
     padding-bottom: 5rem;
     gap: 1rem;
-
-
   }
 }
