:sparkles: Implement new page layout

--- a/src/components/RoomGrid/style.scss
+++ b/src/components/RoomGrid/style.scss
@@ -1,9 +1,8 @@
 .RoomGrid {
   padding-bottom: 4rem;
-  min-height: calc(100vh - 23.4rem);
 
   ul {
-    margin: auto;
+    //margin: auto;
     list-style-type: none;
     padding: 0;
   }
